# nextplot

./: .gitignore  LICENSE  README.md  plot.py  pyproject.toml  requirements-dev.txt
.github/workflows/: build.yml  publish.yml  release.yml  static.yml
content/gallery/dortmund-route/: index.html
content/gallery/fleet-cloud/: fleet-cloud-animation.html  index.html
content/gallery/fleet-cloud-comparison/: index.html
examples/: README.md
examples/data/: dortmund-cluster.json  dortmund-point.json  dortmund-route.json  fleet-cloud-all-0.7.3.json  fleet-cloud-all-0.8.json  fleet-cloud.json  hamburg-route.json  kyoto-route.json  paris-route.json  rome-cluster.json  rome-point.json  rome-route.json
examples/gallery/: README.md
nextplot/: __about__.py  __init__.py  cluster.py  common.py  geojson.py  main.py  osrm.py  point.py  progression.py  route.py  routingkit.py  test.py  types.py
tests/: test_cli.py
tests/testdata/: fleet-cloud-comparison.html.golden  fleet-cloud-comparison.png.golden  geojson-data.json  geojson-data.json.map.html.golden  paris-cluster.json.golden  paris-cluster.map.html.golden  paris-cluster.plot.html.golden  paris-cluster.plot.png.golden  paris-point.json  paris-point.json.golden  paris-point.map.html.golden  paris-point.plot.html.golden  paris-point.plot.png.golden  paris-pos.json  paris-route-indexed.json  paris-route-indexed.map.html.golden  paris-route-indexed.plot.html.golden  paris-route-indexed.plot.png.golden  paris-route.json.golden  paris-route.map.html.golden  paris-route.plot.html.golden  paris-route.plot.png.golden
(+7 files in other folders)
